--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "formik": "^2.4.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.15.0",
+    "sort-by": "^1.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
