--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "react-transition-group": "^4.4.5",
     "sort-by": "^1.2.0",
     "yup": "^1.2.0"
   },
